v20060920
	* Added missing format string to printMyIp
v20060917
	* If --rexmit-hello-interval set on sender, still only display prompt
	once on receiver
	* Improved logging (on sender, offer option to periodically
	log instantaneous bandwidth, log retransmission, and added datestamp
	to all log)
	* Enable autoconf (configure) in order to make it easier to
	compile it on other Unices
	* Reorganized cmd.html file to make it cleaner HTML (all the
	man stuff now in separate files)
	* Fix a buffer overrun on Windows
v20060619
	* Add null-termination to option lists
v20060525
	* Change copyright into license in RPM spec file
	* Fix allocation of FEC memory, so that it only happens when
	needed
	* Fix udpcast for loopback device (send to "self" address)
	* In FEC mode make sure we don't get an excessive number of
	blocks if number of slices is too small
	* Daemon-mode for udp-sender
v20060325
	* Fix packaging, so that we now can build an clean rpm with
	just the command-line programs. The mkimage script for the
	embedded system is now within another RPM (udpcast-mkimage)
	which, for the moment, is still constructed the old kludgy
	way.
v20060320
	* Fixed signed-ness issues (revealed by gcc4)
	* By default write files in unsynchronized mode, for better performance
	* Fix case where data address is the same as rendez-vous address.
v20060312
	* Added usage message for --nosync option
v20060309
	* Fix global_client_config handling in udpr-negotiate.c
	* more intuitive/consistent names for various options
v20060208
	* Fix compilation issue (variable declaration after code)
	* Avoid sending connect request twice
v20051223
	* Phase out of most of the way old endianness backwards
	compatibility hacks
	* Mingw compatibility
	* Commands to do more easier unicast
	* Fix Case where Control-C is pressed on receiver right when
	it waits for the "start" keypress
v20051204
	* Suppress excessive timeout messages (only print message
	after 5 timeouts have expired...)