@@ -1,4 +1,4 @@
-%define udpcast_version 20060920
+%define udpcast_version 20060921
 %define udpcast_release 1
 
 Summary: UDP Broadcast Installation
@@ -36,7 +36,11 @@ make install
 /usr/share/man/man1/udp-receiver.1.gz
 
 %changelog
-* Sun Sep 20 2006 Alain Knaff <alain@knaff.lu>
+* Thu Sep 20 2006 Alain Knaff <alain@knaff.lu>
+- Include uio.h into socklib.h, needed with older include files for iovec
+- Avoid variable name "log", apparently, for older compilers, this shadows the
+name of a built-in
+* Wed Sep 20 2006 Alain Knaff <alain@knaff.lu>
 - Added missing format string to printMyIp
 * Sun Sep 17 2006 Alain Knaff <alain@knaff.lu>
 - If --rexmit-hello-interval set on sender, still only display prompt
